# simple-web-server

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  server.py  setup.cfg  setup.py
etc/: config.ini
web_server/: version.py
web_server/cmd/: dbsync.py  server.py
web_server/db/: consts.py  context.py  exceptions.py
web_server/db/sqlalchemy/: api.py  migration.py  models.py
web_server/db/sqlalchemy/alembic/: env.py  script.py.mako
web_server/db/sqlalchemy/alembic/versions/: 84c1aa6d333a_init_schema.py
