[metadata]
name = simple-web-server
summary = simple web server with webob + eventlet + paste
author_email = annp.cs51@gmail.com
description_file = README.md
platform = any
classifier =
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Unix

[entry_points]
console_scripts =
    simple-web-server = server:main